task/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-service
spec:
  selector:
    app: sentiment-api
  ports:
  - port: 80
    targetPort: 8080
